<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>calibration_delay</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="takehaya.724@gmail.com">takeyama</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>OpenMP</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>Boost COMPONENTS system</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>libopencv-dev</exec_depend>
  <exec_depend>OpenMP</exec_depend>
  <exec_depend>pcl</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>boost</exec_depend>
  <exec_depend>Boost COMPONENTS system</exec_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>rviz</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>rmw_implementation_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
