<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>map</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="takehaya.724@gmail.com">takeyama</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>pcl_conversions</depend>
  <depend>message_filters</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>libopencv-dev</depend>
  <!-- <depend>pcl_apps_msgs</depend> -->
  <!-- <depend>libpcl-all-dev</depend> -->
  <depend>libboost-system-dev</depend>
  <depend>octomap</depend>
  <depend>cv_bridge</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>rmw_implementation_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
